--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.4.0"
   },
-  "babelify": {
+  "browserify": {
     "transform": [
       "babelify"
     ]
