--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "npm": ">=3.3.8"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "dist": "bin/dist",
     "gulp": "bin/gulp"
   },
   "repository": {
@@ -38,10 +38,14 @@
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-inject": "^3.0.0",
+    "gulp-minify-css": "^1.2.1",
     "gulp-notify": "^2.2.0",
     "gulp-sass": "^2.0.4",
+    "gulp-uglify": "^1.4.2",
+    "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.5",
     "main-bower-files": "^2.9.0",
+    "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.4.0"
   },
