--- a/package.json
+++ b/package.json
@@ -55,8 +55,10 @@
     ]
   },
   "dependencies": {
+    "history": "^1.17.0",
     "lodash": "^4.0.0",
     "react": "^0.14.0",
-    "react-dom": "^0.14.0"
+    "react-dom": "^0.14.0",
+    "react-router": "^1.0.3"
   }
 }
