--- a/package.json
+++ b/package.json
@@ -32,33 +32,39 @@
   },
   "homepage": "https://github.com/radical-edo/react-boilerplate#readme",
   "devDependencies": {
-    "babelify": "^6.3.0",
-    "browserify": "^11.2.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "babelify": "^7.3.0",
+    "browserify": "^13.0.0",
     "colors": "^1.1.2",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
-    "gulp-inject": "^3.0.0",
-    "gulp-minify-css": "^1.2.1",
+    "gulp-inject": "^4.1.0",
     "gulp-notify": "^2.2.0",
-    "gulp-sass": "^2.0.4",
-    "gulp-uglify": "^1.4.2",
-    "gulp-util": "^3.0.7",
-    "gulp-watch": "^4.3.5",
-    "main-bower-files": "^2.9.0",
+    "gulp-uglify": "^1.5.0",
+    "gulp-util": "^3.0.0",
+    "gulp-watch": "^4.3.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.4.0"
+    "watchify": "^3.7.0"
   },
   "browserify": {
     "transform": [
-      "babelify"
+      [
+        "babelify",
+        {
+          "presets": [
+            "es2015",
+            "react"
+          ]
+        }
+      ]
     ]
   },
   "dependencies": {
-    "history": "^1.17.0",
     "lodash": "^4.0.0",
-    "react": "^0.14.0",
-    "react-dom": "^0.14.0",
-    "react-router": "^1.0.3"
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "react-router": "^3.0.0-alpha.1"
   }
 }
