--- a/package.json
+++ b/package.json
@@ -1,71 +1,40 @@
 {
   "name": "react-boilerplate",
-  "version": "2.0.0",
-  "description": "React.js gulp setup",
-  "engines": {
-    "node": ">=4.2.1",
-    "npm": ">=3.3.8"
-  },
-  "scripts": {
-    "dist": "bin/dist",
-    "start": "bin/gulp"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/radical-edo/react-boilerplate.git"
-  },
-  "keywords": [
-    "react.js",
-    "es6",
-    "babelify",
-    "boilerplate",
-    "gulp"
-  ],
+  "version": "1.0.0",
+  "description": "",
+  "main": "",
   "author": {
-    "nickname": "radical-edo",
-    "name": "Mateusz Barczak",
-    "email": "radical.3do@gmail.com"
+    "github": "https://github.com/radical-edo",
+    "email": "mateusz.kosma.barczak@gmail.com",
+    "name": "Mateusz (Max) Barczak"
   },
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/radical-edo/react-boilerplate/issues"
+  "license": "ISC",
+  "scripts": {
+    "build": "webpack --progress --colors",
+    "start": "webpack-dev-server"
   },
-  "homepage": "https://github.com/radical-edo/react-boilerplate#readme",
   "devDependencies": {
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.5.0",
-    "babelify": "^7.3.0",
-    "browserify": "^13.0.0",
-    "colors": "^1.1.2",
-    "gulp": "^3.9.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-inject": "^4.1.0",
-    "gulp-notify": "^2.2.0",
-    "gulp-uglify": "^1.5.0",
-    "gulp-util": "^3.0.0",
-    "gulp-watch": "^4.3.0",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.7.0"
-  },
-  "browserify": {
-    "transform": [
-      [
-        "babelify",
-        {
-          "presets": [
-            "es2015",
-            "react"
-          ]
-        }
-      ]
-    ]
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-2": "^6.18.0",
+    "html-loader": "^0.4.4",
+    "html-webpack-plugin": "^2.24.1",
+    "webpack": "v2.2.0-rc.1",
+    "webpack-dev-server": "2.2.0-rc.0"
   },
   "dependencies": {
-    "lodash": "^4.0.0",
-    "radium": "^0.17.1",
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0",
-    "react-router": "^3.0.0-alpha.1"
+    "bluebird": "^3.4.7",
+    "browser-resource": "^0.5.3",
+    "immutable": "^3.8.1",
+    "lodash": "^4.17.4",
+    "moment": "2.17.1",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
+    "react-redux": "^5.0.1",
+    "react-router": "^3.0.0",
+    "redux": "^3.6.0",
+    "styled-components": "^1.2.1"
   }
 }
